force-app/main/default/objects/ServiceRequest__c/ServiceRequest__c.object-meta.xml
<CustomObject>
    <description>oggetto per configurare la capability &quot;Matrice Compatibilità e Sequenzializzatore&quot;.  Ogni record rappresenta un processo (sales o post sales) i quali verranno utilizzati dal tool &quot;Compatibility&quot; di Pclick per valutare l&apos;eventuale inammissibilità del processo.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Service Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>