force-app/main/default/objects/ServiceRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifica l&apos;Account associato al processo.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>