force-app/main/default/objects/ServiceRequest__c/fields/BillingProfile__c.field-meta.xml
<CustomField>
    <fullName>BillingProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifica il BillingProfile associato al processo.</description>
    <label>Billing Profile</label>
    <referenceTo>BillingProfile__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>