force-app/main/default/objects/ServiceRequest__c/fields/CommoditySector__c.field-meta.xml
<CustomField>
    <fullName>CommoditySector__c</fullName>
    <description>Identifica il settore merceologico del ServicePoint associato al Processo.</description>
    <label>Settore Merceologico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energia Elettrica</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Teleriscaldamento</fullName>
            </value>
            <value>
                <fullName>Acqua</fullName>
            </value>
            <value>
                <fullName>Ambiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>