force-app/main/default/objects/ServiceRequest__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <formula>IF(OR(ISPICKVAL(Status__c, &apos;Chiuso&apos;),ISPICKVAL(Status__c, &apos;Completato&apos;),ISPICKVAL(Status__c, &apos;Annullato&apos;)), true, false)</formula>
    <label>isClosed</label>
    <type>Checkbox</type>
</CustomField>