force-app/main/default/objects/ServiceRequest__c/fields/isMigrated__c.field-meta.xml
<CustomField>
    <fullName>isMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo per tracciare che si tratta di un Oggetto migrato</description>
    <label>Migrato</label>
    <type>Checkbox</type>
</CustomField>