force-app/main/default/objects/ServiceRequest__c/fields/NextPhase__c.field-meta.xml
<CustomField>
    <fullName>NextPhase__c</fullName>
    <description>Identifica la fase in cui il processo sequenzializzato dovrà atterrare.</description>
    <label>Fase Successiva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>