force-app/main/default/objects/ServiceRequest__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifica l&apos;Order (nei processi Sales) associato al processo.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>