force-app/main/default/objects/ServiceRequest__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Tipologia Processo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ProcessType</valueSetName>
    </valueSet>
</CustomField>