force-app/main/default/objects/ServiceRequest__c/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifica il ServicePoint associato al processo</description>
    <label>Service Point</label>
    <referenceTo>ServicePoint__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>