force-app/main/default/objects/ServiceRequest__c/fields/ServicePointCode__c.field-meta.xml
<CustomField>
    <fullName>ServicePointCode__c</fullName>
    <description>Identifica l&apos;ID del ServicePoint associato al processo.</description>
    <label>Codice Service Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>