force-app/main/default/objects/ServiceRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Definisce lo stato del processo, se in lavorazione oppure chiuso/annullato.</description>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bozza</fullName>
            </value>
            <value>
                <fullName>In Lavorazione</fullName>
            </value>
            <value>
                <fullName>Chiuso</fullName>
            </value>
            <value>
                <fullName>Completato</fullName>
            </value>
            <value>
                <fullName>Annullato</fullName>
            </value>
            <value>
                <fullName>Sequenzializzato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>